3.3/network-policy/20-allow-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-dns
  namespace: app
spec:
  podSelector:
    matchLabels: {}   
  policyTypes:
    - Egress
  egress:
    - ports:
      - protocol: UDP
        port: 53
